--- a/alacritty.yml
+++ b/alacritty.yml
@@ -27,8 +27,11 @@ window:
   # Blank space added around the window in pixels. This padding is not scaled by
   # DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 2
-    y: 2
+    x: 0
+    y: 0
+
+  # Spread additional padding evenly around the terminal content.
+  dynamic_padding: false
 
   # Window decorations
   #
@@ -38,6 +41,9 @@ window:
   # - transparent: title bar, transparent background and title bar buttons
   # - buttonless: title bar, transparent background, but no title bar buttons
   decorations: full
+
+  # When true, alacritty starts maximized.
+  start_maximized: false
 
 scrolling:
   # maximum number of lines in the scrollback buffer. Specifying '0' will
@@ -67,9 +73,6 @@ scrolling:
 # change the `it` value in terminfo when altering this setting.
 #
 tabspaces: 8
-
-# When true, bold text is drawn using the bright variant of colors.
-draw_bold_text_with_bright_colors: true
 
 # Font configuration (changes require restart)
 font:
@@ -110,7 +113,7 @@ font:
 
   # Scale the font size based on the monitor's DPI. This will lead to bigger
   # text on HiDPI screens and make reading text a little easier.
-  scale_with_dpi: true
+  # scale_with_dpi: true
 
   # Thin stroke font rendering (macOS only)
   #
@@ -118,12 +121,18 @@ font:
   # probably want this set to false.
   use_thin_strokes: true
 
+# When true, bold text is drawn using the bright variant of colors.
+draw_bold_text_with_bright_colors: true
+
 # Should display the render timer
 render_timer: false
 
+# Keep the log file after quitting Alacritty.
+persistent_logging: false
+
 # Use custom cursor colors. If true, display the cursor in the cursor.foreground
 # and cursor.background colors, otherwise invert the colors of the cursor.
-custom_cursor_colors: false
+# custom_cursor_colors: false
 
 # Colors
 colors:
@@ -132,11 +141,12 @@ colors:
     background: '0xffffff'
     foreground: '0x2e2e2d'
 
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x2e2e2d'
-    # text: '0x000000'
-    cursor: '0xffffff'
+  # Colors that should be used to draw the terminal cursor. If these are unset,
+  # the cursor colour will be the inverse of the cell colour.
+  # cursor:
+  #   text: '0x2e2e2d'
+  #   # text: '0x000000'
+  #   cursor: '0xffffff'
 
   # Normal colors
   normal:
@@ -342,11 +352,27 @@ mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
 
-  selection:
-    semantic_escape_chars: ",│`|:\"' ()[]{}<>"
+  # If this is `true`, the cursor is temporarily hidden when typing.
+  hide_when_typing: true
 
-    # When set to `true`, selected text will be copied to the primary clipboard.
-    save_to_clipboard: false
+  url:
+    # URL launcher
+    #
+    # This program is executed when clicking on a text which is recognized as a URL.
+    # The URL is always added to the command as the last parameter.
+    launcher: open
+
+    # URL modifiers
+    #
+    # These are the modifiers that need to be held down for opening URLs when clicking
+    # on them. The available modifiers are documented in the key binding section.
+    #modifiers: Control|Shift
+
+selection:
+  semantic_escape_chars: ",│`|:\"' ()[]{}<>"
+
+  # When set to `true`, selected text will be copied to the primary clipboard.
+  save_to_clipboard: false
 
 # Mouse bindings
 #
@@ -366,17 +392,20 @@ mouse:
 mouse_bindings:
   - { mouse: Middle, action: PasteSelection }
 
-# Cursor style
-#
-# Values for 'cursor_style':
-#   - Block
-#   - Underline
-#   - Beam
-cursor_style: Block
+cursor:
+  # Cursor style
+  #
+  # Values for 'style':
+  #   - ▇ Block
+  #   - _ Underline
+  #   - | Beam
+  style: Block
 
-hide_cursor_when_typing: true
+  # If this is `true`, the cursor will be rendered as a hollow box when the
+  # window is not focused.
+  unfocused_hollow: true
 
-dynamic_title: false
+# dynamic_title: false
 
 # Live config reload (changes require restart)
 live_config_reload: true
