--- a/alacritty.yml
+++ b/alacritty.yml
@@ -482,7 +482,7 @@ live_config_reload: true
 # You can set shell.program to the path of your favorite shell, e.g. /bin/fish.
 # Entries in shell.args are passed unmodified as arguments to the shell.
 shell:
-  program: /usr/local/homebrew/bin/fish
+  program: /usr/local/bin/fish
   args:
     - --command=tmux
 
